# HoomanAI

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_script.py
examples/: basic_implementation.py
src/hoomanai/: __init__.py
src/hoomanai/agents/: __init__.py
src/hoomanai/agents/compound_agents/: RAG.py  __init__.py  query2insights.py
src/hoomanai/agents/mini_agents/: __init__.py  qna.py  retriever_agent.py  sql_generator.py  summarizer.py
src/hoomanai/config/: settings.py
src/hoomanai/core/: __init__.py  compound_agent.py  master_agent.py  memory.py  mini_agent.py  types.py
src/hoomanai/memory/: long_term.py  redis_storage.py  short_term.py  storage.py
src/hoomanai/tools/db/: __init__.py  config.py  connector.py  exceptions.py
src/hoomanai/tools/llm/: __init__.py  client.py  config.py  exceptions.py  types.py
src/hoomanai/tools/text/: metrics.py  splitter.py
