[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hoomanai"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "An extensible framework for building and orchestrating AI agents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "uuid>=1.30",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/hoomanai"
"Bug Tracker" = "https://github.com/yourusername/hoomanai/issues"